--- a/epsilon-runtime-osgi/pom.xml
+++ b/epsilon-runtime-osgi/pom.xml
@@ -6,7 +6,7 @@
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
         <version>1.2.0-SNAPSHOT</version>
-        <relativePath>../epsilon-runtime-parent</relativePath>
+        <relativePath>../</relativePath>
     </parent>
 
     <artifactId>epsilon-runtime-osgi</artifactId>
