--- a/wercker.yml
+++ b/wercker.yml
@@ -4,22 +4,33 @@ command-timeout: 60
 
 build:
   steps:	
-   
+    - blackbelttechnology/import-gpg-keys@1.0.4:
+      secretkeys: $GPG_SECRET_KEYS 
+      ownertrust: $GPG_OWNERTRUST
+
     - blackbelttechnology/version-from-git-tag@1.0.5
  
     - blackbelttechnology/version-from-pom@1.0.2:
-       pom: epsilon-runtime-parent/pom.xml
+      pom: ./pom.xml
       
     - wercker/maven:
       goals: versions:set
-      pom: ./epsilon-runtime-parent/pom.xml
-      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}_${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}-${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
+      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}.${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}_${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
+      settings: .maven.xml
       cache_repo: true
 
     - wercker/maven:
       goals: clean deploy
+      profiles: ${BUILD_PROFILES}
       settings: .maven.xml
-      profiles: release-github,release-blackbelt
+      maven_opts: -Dorg.ops4j.pax.url.mvn.settings=${WERCKER_ROOT}/.maven.xml -DuseCustomSettings=true
+      cache_repo: true
+
+    - wercker/maven:
+      goals: deploy
+      settings: .maven.xml
+      maven_opts: -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      profiles: ${RELEASE_GITHUB_PROFILES}
       cache_repo: true
 
 #  after-steps:
@@ -46,42 +57,42 @@ release:
 #      keyname: GITHUB_SSH_KEY
 
     - script:
-        name: set git remote origis
-        code: |-
+      name: set git remote origis
+      code: |-
              git remote set-url origin https://$GITHUB_ACCESS_TOKEN@github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY.git
              git fetch origin
 
     - script:
-        name: display branches
-        code: |-
+      name: display branches
+      code: |-
              git branch -a
              git branch -r
 
 
     - script:
-        name: setup git for maven
-        code: |-
+      name: setup git for maven
+      code: |-
              git config --global user.email "oss@blackbelt.hu"
              git config --global user.name "Wercker Release"
     
-    - blackbelttechnology/version-from-git-tag@1.0.0
+    - blackbelttechnology/version-from-git-tag@1.0.5
 
     - script:
-        name: reset git state to actual commit
-        code: |-
+      name: reset git state to actual commit
+      code: |-
              git reset --hard $WERCKER_GIT_COMMIT
 
     - script:
-        name: create barnch for builder
-        code: |-
+      name: create barnch for builder
+      code: |-
              git branch wercker_$WERCKER_RUN_ID
 
     - blackbelttechnology/version-from-pom@1.0.2:
-       pom: epsilon-runtime-parent/pom.xml
+      pom: ./pom.xml
 
     - script:
-        name: create release branch from current commit
-        code: |-
+      name: create release branch from current commit
+      code: |-
              git checkout -b release/v$VERSION_FROM_POM_BASE_VERSION wercker_$WERCKER_RUN_ID
 
 ## Deploy using release plugin
@@ -100,82 +111,89 @@ release:
 # Set version and deploy with steps
     - wercker/maven:
       goals: versions:set
-      pom: ./epsilon-runtime-parent/pom.xml
       maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION} -DgenerateBackupPoms=false
       settings: .maven.xml
       cache_repo: true
 
     - wercker/maven:
       goals: clean deploy
+      profiles: ${RELEASE_PROFILES}
       settings: .maven.xml
-      profiles: release-github,release-central
+      maven_opts: -Dorg.ops4j.pax.url.mvn.settings=${WERCKER_ROOT}/.maven.xml -DuseCustomSettings=true
+      cache_repo: true
+
+    - wercker/maven:
+      goals: deploy
+      settings: .maven.xml
+      maven_opts: -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      profiles: ${RELEASE_GITHUB_PROFILES}
       cache_repo: true
 
     - script:
-        name: commit the release
-        code: |-
+      name: commit the release
+      code: |-
              git add .
              git commit -m "Release v$VERSION_FROM_POM_BASE_VERSION"
 
     - script:
-        name: tag release branch
-        code: |-
+      name: tag release branch
+      code: |-
              git tag -a v$VERSION_FROM_POM_BASE_VERSION -m "Release v$VERSION_FROM_POM_BASE_VERSION"
 
     - script:
-        name: increase version number
-        code: "mvn build-helper:parse-version versions:set -DnewVersion=\\${parsedVersion.majorVersion}.\\${parsedVersion.minorVersion}.\\${parsedVersion.nextIncrementalVersion}-SNAPSHOT -DgenerateBackupPoms=false -f ./epsilon-runtime-parent/pom.xml  -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2"
+      name: increase version number
+      code: "mvn build-helper:parse-version versions:set -DnewVersion=\\${parsedVersion.majorVersion}.\\${parsedVersion.minorVersion}.\\${parsedVersion.nextIncrementalVersion}-SNAPSHOT -DgenerateBackupPoms=false -f ./pom.xml  -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2"
  
     - script:
-        name: commit to release branch
-        code: |-
+      name: commit to release branch
+      code: |-
              git add .
              git commit -m "Next development cycle"
 
 # End of deploy
 
     - script:
-        name: get back to the develop branch
-        code: |-
+      name: get back to the develop branch
+      code: |-
              git checkout develop
 
     - script:
-        name: merge the version back into develop
-        code: |-
+      name: merge the version back into develop
+      code: |-
              git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION
 
 
     - script:
-        name: git checkout master
-        code: |-
+      name: git checkout master
+      code: |-
              git checkout master
 
 
     - script:
-        name: merge the version back into master but the tagged version instead of the release/v0.1 HEAD
-        code: |-
+      name: merge the version back into master but the tagged version instead of the release/v0.1 HEAD
+      code: |-
              git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION~1
 
     - script:
-        name: draw git
-        code: |-
+      name: draw git
+      code: |-
              git log --graph --oneline --all
 
 
     - script:
-        name: delete release branch
-        code: |-
+      name: delete release branch
+      code: |-
              git branch -D release/v$VERSION_FROM_POM_BASE_VERSION
 
     - script:
-        name: delete builder branch
-        code: |-
+      name: delete builder branch
+      code: |-
              git branch -D wercker_$WERCKER_RUN_ID
 
 
     - script:
-        name: push everything
-        code: |-
+      name: push everything
+      code: |-
              git push origin --all
              git push origin --tags
 
