--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,23 @@
         <system>GitHub Issues</system>
     </issueManagement>
     <properties>
+        <!-- Xtend / Xcore -->
+        <emf-version>2.18.0</emf-version>
+        <emf-common-version>2.16.0</emf-common-version>
+        <core-resources-version>3.12.0</core-resources-version>
+        <eclipse-text-version>3.5.101</eclipse-text-version>
+        <emf-codegen-version>2.16.0</emf-codegen-version>
+        <emf-codegen-ecore-version>2.18.0</emf-codegen-ecore-version>
+        <emf-ecore-xmi-version>2.16.0</emf-ecore-xmi-version>
+        <xtext-version>2.17.0</xtext-version>
+        <ecore-xtext-version>1.2.0</ecore-xtext-version>
+        <ecore-xcore-version>1.3.1</ecore-xcore-version>
+        <ecore-xcore-lib-version>1.3.0</ecore-xcore-lib-version>
+        <emf-mwe2-launch-version>2.10.0</emf-mwe2-launch-version>
+        <emf-mwe-utils-version>1.4.0</emf-mwe-utils-version>
+        <xpand-version>2.0.0</xpand-version>
+        <emf-mapping-ecore2xml>2.11.0</emf-mapping-ecore2xml>
+
         <epsilon-version>1.5.1</epsilon-version>
         <karaf-version>4.2.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
@@ -253,14 +270,35 @@
             <version>${epsilon-version}</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
-            <version>2.9.0</version>
+            <version>${emf-mapping-ecore2xml}</version>
             <scope>provided</scope>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.common</artifactId>
+            <version>${emf-common-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore</artifactId>
+            <version>2.18.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+            <version>2.16.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
