--- a/epsilon-runtime-execution/pom.xml
+++ b/epsilon-runtime-execution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <relativePath>../</relativePath>
     </parent>
 
