--- a/epsilon-runtime-utils/pom.xml
+++ b/epsilon-runtime-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
-        <version>1.2.1</version>
+        <version>1.2.2-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>epsilon-runtime-utils</artifactId>
