--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <epsilon-version>1.5.1</epsilon-version>
         <karaf-version>4.2.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
-        <osgi-utils-version>1.0.9</osgi-utils-version>
+        <osgi-utils-version>1.0.10</osgi-utils-version>
         <google-karaf-features-version>1.0.4</google-karaf-features-version>
         <javax-karaf-features-version>1.0.2</javax-karaf-features-version>
         <bouncycastle-karaf-features-version>1.61.2</bouncycastle-karaf-features-version>
@@ -300,7 +300,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>27.1-jre</version>
             <scope>provided</scope>
         </dependency>
         
