--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>hu.blackbelt.epsilon</groupId>
     <artifactId>epsilon-runtime-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     
     <name>epsilon-runtime</name>
     <description>Eclipse Epsilon runtime for OSGi/Maven. It wraps the script calling and meta model regitration</description>
@@ -13,24 +13,20 @@
         <system>GitHub Issues</system>
     </issueManagement>
     <properties>
-        <!-- Xtend / Xcore -->
-        <emf-version>2.18.0</emf-version>
-        <emf-common-version>2.16.0</emf-common-version>
-        <core-resources-version>3.12.0</core-resources-version>
-        <eclipse-text-version>3.5.101</eclipse-text-version>
-        <emf-codegen-version>2.16.0</emf-codegen-version>
-        <emf-codegen-ecore-version>2.18.0</emf-codegen-ecore-version>
-        <emf-ecore-xmi-version>2.16.0</emf-ecore-xmi-version>
-        <xtext-version>2.17.0</xtext-version>
-        <ecore-xtext-version>1.2.0</ecore-xtext-version>
-        <ecore-xcore-version>1.3.1</ecore-xcore-version>
-        <ecore-xcore-lib-version>1.3.0</ecore-xcore-lib-version>
-        <emf-mwe2-launch-version>2.10.0</emf-mwe2-launch-version>
-        <emf-mwe-utils-version>1.4.0</emf-mwe-utils-version>
-        <xpand-version>2.0.0</xpand-version>
+        <osgi-default-import>
+          org.osgi.framework;version="[1.8,2.0)",
+          !lombok,
+          javax.annotation;version="[1.0,2)"
+        </osgi-default-import>
+        
+        <emf-ecore-version>2.21.0</emf-ecore-version>
+        <emf-xsd-version>2.17.0</emf-xsd-version>
+        <emf-ecore-change-version>2.14.0</emf-ecore-change-version>
+        <emf-common-version>2.21.0</emf-common-version>
         <emf-mapping-ecore2xml>2.11.0</emf-mapping-ecore2xml>
+        <emf-ecore-xmi-version>2.16.0</emf-ecore-xmi-version>
 
-        <epsilon-version>1.5.1</epsilon-version>
+        <epsilon-version>2.2.0</epsilon-version>
         <karaf-version>4.2.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
         <osgi-utils-version>1.0.10</osgi-utils-version>
@@ -38,7 +34,7 @@
         <javax-karaf-features-version>1.0.2</javax-karaf-features-version>
         <bouncycastle-karaf-features-version>1.61.2</bouncycastle-karaf-features-version>
         <eclipse-emf-karaf-features-version>1.0.1</eclipse-emf-karaf-features-version>
-        <eclipse-epsilon-karaf-features-version>1.0.3</eclipse-epsilon-karaf-features-version>
+        <eclipse-epsilon-karaf-features-version>1.0.4.20210228_081623_ebdc67b_develop</eclipse-epsilon-karaf-features-version>
         <antlr-karaf-features-version>1.0.1</antlr-karaf-features-version>
         <apache-commons-karaf-features-version>1.0.5</apache-commons-karaf-features-version>
         <apache-poi-karaf-features-version>1.0.2</apache-poi-karaf-features-version>
@@ -87,8 +83,7 @@
                                 hu.blackbelt.epsilon.runtime.*;version=${project.version}
                             </Export-Package>
                             <Import-Package>
-                                !lombok,
-                                javax.annotation;version="[1.0,2)",
+                                ${osgi-default-import},
                                 *
                             </Import-Package>
                             <Include-Resource>{maven-resources}</Include-Resource>
@@ -229,6 +224,153 @@
 
         <dependency>
             <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.common</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.profiling</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.workflow</artifactId>
+            <version>${epsilon-version}</version>
+            <scope>provided</scope>
+        </dependency> -->
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emc.emf</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emc.spreadsheets</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emc.composite</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emc.plainxml</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emc.hutn</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.eol.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.erl.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.etl.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.evl.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.emg.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.ecl.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.eml.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.pinset.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.model.config</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.engine</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.model</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.model.antlrAst</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.xmi</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.hutn.unparser</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.antlr.postprocessor</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
+            <artifactId>org.eclipse.epsilon.antlr.postprocessor.model</artifactId>
+            <version>${epsilon-version}</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.eclipse.epsilon</groupId>
             <artifactId>epsilon-workflow</artifactId>
             <version>${epsilon-version}</version>
             <scope>provided</scope>
@@ -261,7 +403,7 @@
             <version>${epsilon-version}</version>
             <scope>provided</scope>
         </dependency>
-
+-->
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.mapping.ecore2xml</artifactId>
@@ -279,21 +421,35 @@
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore</artifactId>
-            <version>2.18.0</version>
+            <version>${emf-ecore-version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-            <version>2.16.0</version>
+            <version>${emf-ecore-xmi-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.change</artifactId>
+            <version>${emf-ecore-change-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.xsd</artifactId>
+            <version>${emf-xsd-version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.0</version>
+            <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
         
