--- a/pom.xml
+++ b/pom.xml
@@ -449,7 +449,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.18</version>
             <scope>provided</scope>
         </dependency>
         
@@ -632,69 +632,43 @@
         </profile>
 
         <profile>
-            <id>release-github</id>
+            <id>generate-github-release-body</id>
+            <activation>
+                <property>
+                    <name>github_release</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>de.jutzig</groupId>
-                        <artifactId>github-release-plugin</artifactId>
-                        <version>1.3.0</version>
-                        <inherited>false</inherited>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>release-to-github</id>
-
-                                <configuration>
-                                    <repositoryId>https://github.com/BlackBeltTechnology/epsilon-runtime.git</repositoryId>
-                                    <description>Branch: ${env.WERCKER_GIT_BRANCH} Wercker: ${env.WERCKER_RUN_URL}</description>
-                                    <releaseName>${project.version}</releaseName>
-                                    <deleteRelease>true</deleteRelease>
-                                    <tag>${project.version}</tag>
-                                    <!--
-                                    <fileSets>
-                                        <fileSet>
-                                            <directory>epsilon-runtime-execution/target</directory>
-                                            <includes>
-                                                <include>*.jar</include>
-                                            </includes>
-                                        </fileSet>
-                                        <fileSet>
-                                            <directory>epsilon-runtime-utils/target</directory>
-                                            <includes>
-                                                <include>*.jar</include>
-                                            </includes>
-                                        </fileSet>
-                                        <fileSet>
-                                            <directory>epsilon-runtime-osgi/target</directory>
-                                            <includes>
-                                                <include>*.jar</include>
-                                            </includes>
-                                        </fileSet>
-                                        <fileSet>
-                                            <directory>features/target/feature/</directory>
-                                            <includes>
-                                                <include>feature.xml</include>
-                                            </includes>
-                                        </fileSet>
-                                        <fileSet>
-                                            <directory>kar/target</directory>
-                                            <includes>
-                                                <include>*.kar</include>
-                                            </includes>
-                                        </fileSet>
-                                    </fileSets>
-                                     -->
-                                </configuration>
-
-                                <phase>deploy</phase>
+                                <id>template-github-release-body</id>
+                                <phase>process-resources</phase>
                                 <goals>
-                                    <goal>release</goal>
+                                    <goal>copy-resources</goal>
                                 </goals>
+                                <configuration>
+                                    <outputDirectory>${basedir}/.release</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.basedir}</directory>
+                                            <filtering>true</filtering>
+                                            <includes>
+                                                <include>.releasetemplate</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile>        
     </profiles>
 </project>
