--- a/wercker.yml
+++ b/wercker.yml
@@ -43,9 +43,25 @@ build:
       name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
-      maven_opts: -Dtycho.mode=maven -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      maven_opts: -Dtycho.mode=maven -DdeployOnly -DskipTests=true -Dgithub_release=true
       profiles: ${DEPLOY_PROFILES}
       cache_repo: true
+
+    - script:
+      name: get github release attributes
+      code: |-
+        export GITHUB_RELEASE_BODY=$(cat ./.release/.releasetemplate | jq -aRs . | sed 's/"//g')
+        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_NUMBER" | jq -aRs . | sed 's/"//g')
+        echo "Release title: $GITHUB_RELEASE_TITLE"
+        echo "Release notes: $GITHUB_RELEASE_BODY"
+
+    - github-create-release:
+      token: $GITHUB_ACCESS_TOKEN
+      tag: $VERSION_NUMBER
+      title: $GITHUB_RELEASE_TITLE
+      body: $GITHUB_RELEASE_BODY
+      prerelease: true
+
 
 #  after-steps:
 #    - mbrevda/github-status:
@@ -144,7 +160,7 @@ release:
       name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
-      maven_opts: -Dtycho.mode=maven -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      maven_opts: -Dtycho.mode=maven -DdeployOnly -DskipTests=true -Dgithub_release=true
       profiles: ${DEPLOY_PROFILES}
       cache_repo: true
 
@@ -215,3 +231,18 @@ release:
       code: |-
              git push origin --all
              git push origin --tags
+
+    - script:
+      name: get github release attributes
+      code: |-
+        export GITHUB_RELEASE_BODY=$(cat ./.release/.releasetemplate | jq -aRs . | sed 's/"//g')
+        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_NUMBER" | jq -aRs . | sed 's/"//g')
+        echo "Release title: $GITHUB_RELEASE_TITLE"
+        echo "Release notes: $GITHUB_RELEASE_BODY"
+
+    - github-create-release:
+      token: $GITHUB_ACCESS_TOKEN
+      tag: $VERSION_NUMBER
+      title: $GITHUB_RELEASE_TITLE
+      body: $GITHUB_RELEASE_BODY
+      prerelease: true
