--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <epsilon-version>2.3.0</epsilon-version>
         <karaf-version>4.2.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
-        <osgi-utils-version>1.0.11</osgi-utils-version>
+        <osgi-utils-version>1.0.12.20220316_214508_c75030f0_develop</osgi-utils-version>
         <google-karaf-features-version>1.0.7</google-karaf-features-version>
         <javax-karaf-features-version>1.0.2</javax-karaf-features-version>
         <bouncycastle-karaf-features-version>1.61.2</bouncycastle-karaf-features-version>
