--- a/epsilon-runtime-osgi/pom.xml
+++ b/epsilon-runtime-osgi/pom.xml
@@ -16,6 +16,8 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <version>5.1.6</version>
+                <extensions>true</extensions>
             </plugin>
         </plugins>
     </build>
